<resources>
    <string name="app_name">TPSynthese</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_tickets">Tickets</string>
    <string name="nav_gateways">Gateways</string>
    <string name="nav_network">Network</string>
    <string name="Dev_name" translatable="false">Julius Leblanc Raphaël Nadeau William Bergeron</string>
    <string name="apiErrorMessage" translatable="false">Error while retrieving the data from the server.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txvTicketPriority" translatable="false"></string>
    <string name="txvTicketDate" translatable="false"></string>
    <string name="txvTicketCode" translatable="false">Ticket %s</string>
    <string name="txvPing" translatable="false">%s ns</string>
    <string name="txvUploadDownload" translatable="false">%s ebps</string>
    <string name="txvTicketStatus" translatable="false"></string>
    <string name="txvSignalQuality">%s dBm</string>
    <string name="loading">Loading </string>
    <string name="countdown" translatable="false">0</string>
    <string name="countdownMax" translatable="false">/10...</string>
    <string name="copyright" translatable="false">Tenretni - 2023@</string>
    <string name="txtInstall">Install</string>
    <string name="missing_permission">Missing Permission</string>
    <string name="user_canceled">Cancel</string>
    <string name="qr_success">Gateway was install successfully</string>
    <string name="solve">Solve</string>
    <string name="button_location">button location</string>
    <string name="btnOpen">Open</string>
    <string name="btnUpdate">Update</string>
    <string name="btnReboot">Reboot</string>
    <string name="gateways">Gateways</string>
    <string name="txvPin" translatable="false">PIN: %s</string>
    <string name="txvSSID" translatable="false">SSID: %s</string>
    <string name="txvKernelRevision">Kernel revision %s</string>
    <string name="txvVersion" translatable="false">Version %s</string>

</resources>