<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_network">

    <fragment
        android:id="@+id/navigation_ticket"
        android:name="ca.qc.cstj.tpsynthese.ui.ticket.list.TicketFragment"
        android:label="@string/nav_tickets"
        tools:layout="@layout/fragment_ticket" >
        <action
            android:id="@+id/action_navigation_ticket_to_detailTicketFragment"
            app:destination="@id/detailTicketFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_gateway"
        android:name="ca.qc.cstj.tpsynthese.ui.gateway.GatewayFragment"
        android:label="@string/nav_gateways"
        tools:layout="@layout/fragment_gateway" />

    <fragment
        android:id="@+id/navigation_network"
        android:name="ca.qc.cstj.tpsynthese.ui.network.NetworkFragment"
        android:label="@string/nav_network"
        tools:layout="@layout/fragment_network" />
    <activity
        android:id="@+id/loadingActivity"
        android:name="ca.qc.cstj.tpsynthese.ui.loading.LoadingActivity"
        android:label="activity_loading"
        tools:layout="@layout/activity_loading" />
    <fragment
        android:id="@+id/detailTicketFragment"
        tools:layout="@layout/fragment_detail_ticket"
        android:name="ca.qc.cstj.tpsynthese.ui.ticket.detail.DetailTicketFragment"
        android:label="DetailTicketFragment" >
        <argument
            android:name="href"
            app:argType="string" />
    </fragment>
</navigation>