<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:id="@+id/cdvTicket"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txvTicketCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvTicketCode"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/txvTicketDate"
            app:layout_constraintEnd_toStartOf="@+id/txvTicketPriority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Ticket TiCkEt" />

        <TextView
            android:id="@+id/txvTicketDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvTicketDate"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txvTicketCode"
            app:layout_constraintStart_toStartOf="@+id/txvTicketCode"
            app:layout_constraintTop_toBottomOf="@+id/txvTicketCode"
            tools:text="2003-05-15 12:45" />

        <TextView
            android:id="@+id/txvTicketStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvTicketStatus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvTicketPriority"
            tools:text="Open" />

        <TextView
            android:id="@+id/txvTicketPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txvTicketPriority"
            app:layout_constraintBottom_toTopOf="@+id/txvTicketStatus"
            app:layout_constraintEnd_toEndOf="@+id/txvTicketStatus"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="@+id/txvTicketStatus"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Critical" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

